docs/0.4.0/zh/components/index.mdx
---
title: 组件接入
description: 选择框架绑定，并了解所有编辑器共用的受控组件约定。
---

# 组件接入

所有框架绑定都使用同一套受控内容模型。适配层只转换属性和事件约定，不会维护
第二份编辑器实现。

## 框架绑定

| 框架 | 导入路径 | 内容绑定 |
| --- | --- | --- |
| [React](./react.mdx) | `@a3s-lab/office/react` | `content` 与 `onChange` |
| [Vue](./vue.mdx) | `@a3s-lab/office/vue` | `v-model:content`，或 `content` 与 `@change` |
| [Web Component](./web-component.mdx) | `@a3s-lab/office/web-component` | `.content` 与 `change` 事件 |

## 可用编辑器

| 产品 | 组件 | 内容类型 |
| --- | --- | --- |
| 文档 | [`DocumentEditor`](./document.mdx) | `DocumentContent` |
| Markdown | [`MarkdownEditor`](./markdown.mdx) | `MarkdownContent` |
| 表格 | [`SpreadsheetEditor`](./spreadsheet.mdx) | `SpreadsheetContent` |
| 演示文稿 | [`PresentationEditor`](./presentation.mdx) | `PresentationContent` |
| PDF | [`PdfViewer`](./pdf.mdx) | 输入、输出均为 `Blob` |

## 通用界面属性

| 属性 | 类型 | 默认值 | 说明 |
| --- | --- | --- | --- |
| `theme` | `'light' \| 'dark' \| 'system'` | `'system'` | 编辑器配色模式。 |
| `className` | `string` | — | React 宿主元素类名；Vue 与 Web Component 使用普通 `class`。 |
| `style` | `CSSProperties` | — | React 宿主元素行内样式；编辑器会填满该元素。 |
| `preview` | `boolean` | `false` | 受控编辑器的只读模式。 |
| `saveStatus` | `string` | 各编辑器不同 | 由宿主提供的保存状态。 |
| `fileActions` | `readonly OfficeFileAction[]` | `[]` | 保存、导出、历史记录或审批等宿主文件操作。 |
